added maps support

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">frida - saturday 10am - 11pm | sunday 11am - 8pm</p>
-    <p class="w3-large">42 village St, New York</p>
+    <a target="_blank" href="http://maps.google.com/?q=146 Vasco Blvd, Goodwood, Cape Town, 7459">
+      <p class="w3-large">42 village St, New York</p>
+    </a>
   </div>
 </div>
 
