--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo" style="
-  text-align: center; display: flex;flex-direction: column;justify-content: center;">
+  text-align: center; display: flex;flex-direction: column;align-items: center;">
     <!-- <p>BLACK TOP</p> -->
-    <p style="margin: 0!important;font-size: 6rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
-    <p style="margin: 0!important;font-size: 10rem;line-height:150px;text-align: center;color:black;"><strong>TOP</strong></p>
+    <p style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
+    <p style="margin: 0!important;font-size: 11rem;line-height:150px;text-align: center;color:black;"><strong>TOP</strong></p>
     <span style="font-size:20px;color:white;">STREET KITCHEN</span>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
