--- a/index.html
+++ b/index.html
@@ -44,31 +44,41 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
       <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>Starters</h1>
+      <h1>Favourites</h1>
     </div>
     <div class="w3-container">
-      <h5>Tomato Soup <b>$2.50</b></h5>
-      <h5>Chicken Salad <b>$3.50</b></h5>
-      <h5>Bread and Butter <b>$1.00</b></h5>
+      <h5>Cheesy Fries <b>$6.50</b>
+        <br><span style="font-size: 14px;">Describe the dish here!</span>
+      </h5>
+      <h5>Black Top Burger<b>$2.50</b></h5>
+      <h5>Supper Loaded Boerie <b>$3.50</b></h5>
+      <h5>Kasmiri Prawns & Naan <b>$10.00</b></h5>
     </div>
     <div class="w3-container w3-black">
-      <h1>Main Courses</h1>
+      <h1>Mains</h1>
     </div>
     <div class="w3-container">
-      <h5>Grilled Fish and Potatoes <b>$8.50</b></h5>
-      <h5>Italian Pizza <b>$5.50</b></h5>
-      <h5>Veggie Pasta <b>$4.00</b></h5>
-      <h5>Chicken and Potatoes <b>$6.50</b></h5>
-      <h5>Deluxe Burger <b>$5.00</b></h5>
+      <h5>Loaded Boerie <b>$3.50</b>
+        <br><span style="font-size: 14px;">Describe the dish here!</span>
+    </h5>
+      <h5>Tikka Chicken Skewers & Fries<b>$8.50</b></h5>
+      <h5>Crispey Wings & Fries <b>$5.50</b></h5>
+      <h5>Beef Smash Burger & Fries <b>$4.00</b></h5>
     </div>
     <div class="w3-container w3-black">
-      <h1>Desserts</h1>
+      <h1>Extras</h1>
     </div>
     <div class="w3-container">
-      <h5>Fruit Salad <b>$2.50</b></h5>
-      <h5>Ice cream <b>$2.00</b></h5>
-      <h5>Chocolate Cake <b>$4.00</b></h5>
-      <h5>Cheese <b>$5.50</b></h5>
+      <h5>Jalapeno <b>$2.50</b></h5>
+      <h5>Cheesy Sauce <b>$2.00</b></h5>
+      <h5>Fries <b>$5.50</b></h5>
+    </div>
+    <div class="w3-container w3-black">
+      <h1>Drinks</h1>
+    </div>
+    <div class="w3-container">
+      <h5>Bashews <b>$2.50</b></h5>
+      <h5>Water <b>$2.00</b></h5>
     </div>
   </div>
 </div>
