--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@ body, html {height: 100%}
   <div class="w3-display-middle w3-jumbo" style="
   text-align: center; display: flex;flex-direction: column;align-items: center;">
     <!-- <p>BLACK TOP</p> -->
-    <p style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
+    <!-- <p style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
     <p style="margin: 0!important;font-size: 11rem;line-height:150px;text-align: center;color:black;"><strong>TOP</strong></p>
-    <span style="font-size:20px;color:white;">STREET KITCHEN</span>
+    <span style="font-size:20px;color:white;letter-spacing: 12px;">STREET KITCHEN</span> -->
+    <div style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;padding: 0 10px;"><strong>BLACK</strong></div>
+    <div style="margin: 0!important;font-size: 11rem;line-height:150px;text-align: center;color:black;padding: 0 10px;"><strong>TOP</strong></div>
+    <div><span style="font-size:20px;color:white;letter-spacing: 12px;padding: 0 10px;">STREET KITCHEN</span></div>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
