--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <video autoplay muted loop controls="false" class="mobile">
+  <video playsinline autoplay muted loop controls="false" class="mobile">
     <source src="./images/bt2.mp4" type="video/mp4">
   </video>
   <div class="bgimg w3-display-container w3-text-white">
