--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 </head>
 
 <body>
-  <video playsinline autoplay muted loop controls="false" class="mobile">
+  <video autoplay muted loop class="mobile">
     <source src="./images/bt2.mp4" type="video/mp4">
   </video>
-  <div class="bgimg w3-display-container w3-text-white">
+  <div class=" w3-display-container w3-text-white bgimg">
     <div class="w3-display-topright w3-jumbo" style="
   text-align: center; display: flex;flex-direction: column;align-items: center;background-color:white;margin:16px;">
       <!-- <p>BLACK TOP</p> -->
