--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <video autoplay muted loop playsinline class="mobile">
+  <video src="./images/bt2.mp4" playsinline loop muted autoplay class="mobile">
     <source src="./images/bt2.mp4" type="video/mp4">
   </video>
   <div class=" w3-display-container w3-text-white bgimg">
