--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
 <body>
   <div class="video-container mobile">
-    <video src="./images/mobile_btsk.mp4" muted playsinline loop autoplay preload="auto" class="mobile">
-      <source src="./images/mobile_btsk.mp4" type="video/mp4" />
+    <video src="./images/mbtsk.mp4" muted playsinline loop autoplay preload="auto" class="mobile">
+      <source src="./images/mbtsk.mp4" type="video/mp4" />
     </video>
   </div>
   <!-- <video src="./images/mbtsk.mp4" muted playsinline loop autoplay preload="auto" class="mobile">
