--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       height: 100%
     }
 
+    .title-logo {
+      display: block;
+    }
+
     .bgimg {
       background-image: url('./images/bt1.jpeg');
       min-height: 100%;
@@ -34,6 +38,10 @@
     @media only screen and (max-width: 700px) {
       .bgimg {
         background-image: none;
+      }
+
+      .title-logo {
+        display: none !important;
       }
 
       .mobile {
@@ -81,7 +89,7 @@
     <source src="./images/mbtsk.mp4" type="video/mp4">
   </video> -->
   <div class=" w3-display-container w3-text-white bgimg">
-    <div class="w3-display-topright w3-jumbo" style="
+    <div class="w3-display-topright w3-jumbo title-logo" style="
   text-align: center; display: flex;flex-direction: column;align-items: center;background-color:white;margin:16px;">
       <!-- <p>BLACK TOP</p> -->
       <!-- <p style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
