updated google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TEC622RE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0TEC622RE9');
+  </script>
   <title>Black Top Street Kitchen</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -249,7 +258,6 @@
           </p>
           <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
         </form> -->
-
         <a href="https://wa.me/0765063002?text=I'm%20inquiring%20about%20an%20event" class="fa fa-whatsapp"></a>
         <a href="https://www.instagram.com/blacktopstreetkitchen/" target="_blank" class="fa fa-instagram"></a>
       </div>
@@ -264,11 +272,13 @@
       </div>
       <div class="w3-container">
         <h5>
-          <a target="_blank" href="http://maps.google.com/?q=Erica Drive, Chestnut Way, Belhar 17, Cape Town"> Bayhill Premier Cup Tournament, Elsis River</a>
+          <a target="_blank" href="http://maps.google.com/?q=Erica Drive, Chestnut Way, Belhar 17, Cape Town"> Bayhill
+            Premier Cup Tournament, Elsis River</a>
           <br><span style="font-size: 14px;">april friday 18 - sunday 20</span>
         </h5>
         <h5>
-          <a target="_blank" href="http://maps.google.com/?q=146 Vasco Blvd, Goodwood, Cape Town, 7459"> Vasco Blvd, Goodwood, Cape Town</a>
+          <a target="_blank" href="http://maps.google.com/?q=146 Vasco Blvd, Goodwood, Cape Town, 7459"> Vasco Blvd,
+            Goodwood, Cape Town</a>
           <br><span style="font-size: 14px;">every friday 3pm - 10pm | saturday 12pm - 10pm | sunday 12pm - 8pm</span>
         </h5>
       </div>
