updated ico and logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Black Top Street Kitchen</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./images/bt-icon.jpg">
+  <link rel="icon" type="image/x-icon" href="./images/bt.jpg">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -128,7 +128,7 @@
       <!-- <p style="margin: 0!important;font-size: 7rem;line-height:normal;color:black;"><strong>BLACK</strong></p>
     <p style="margin: 0!important;font-size: 11rem;line-height:150px;text-align: center;color:black;"><strong>TOP</strong></p>
     <span style="font-size:20px;color:white;letter-spacing: 12px;">STREET KITCHEN</span> -->
-      <div
+      <!-- <div
         style="margin: 0!important;font-size: 3rem;line-height:60px;color:black;padding: 0 10px;background-color:white;">
         <strong>BLACK</strong>
       </div>
@@ -136,11 +136,8 @@
         style="margin: 0!important;font-size: 5rem;line-height:60px;text-align: center;color:black;padding: 0 10px;background-color:white;">
         <strong>TOP</strong>
       </div>
-      <!-- <div> -->
-      <span
-        style="font-size:18px;color:black;letter-spacing: 0px;padding: 0 10px;background-color:white;"><strong>STREET
-          KITCHEN</strong></span>
-      <!-- </div> -->
+      <span style="font-size:18px;color:black;letter-spacing: 0px;padding: 0 10px;background-color:white;"><strong>STREET KITCHEN</strong></span> -->
+      <img src="./images/bt-logo.jpg" alt="Black Top Logo" width="200px" height="200px">
     </div>
     <div class="w3-display-topleft w3-container w3-xlarge">
       <p><button onclick="document.getElementById('menu').style.display='block'"
