--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       opacity: 0.7;
     }
 
-    .fa-whatsapp {
+    /* .fa-whatsapp {
       background: #24d366;
       color: white;
     }
@@ -109,6 +109,11 @@
       background: #125688;
       color: white;
     }
+
+    .fa-tiktok {
+      background: #125688;
+      color: white;
+    } */
   </style>
 </head>
 
@@ -255,9 +260,17 @@
           </p>
           <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
         </form> -->
-        <a href="https://wa.me/0765063002?text=I'm%20inquiring%20about%20an%20event" class="fa fa-whatsapp"></a>
-        <a href="https://www.instagram.com/blacktopstreetkitchen/" target="_blank" class="fa fa-instagram"></a>
+        <a href="https://wa.me/27765063002?text=Hey%20BlackTop%20Street%20Kitchen!%20I'm%20looking%20to%20make%20an%20enquiry%20about%20a%20booking" class="fa">
+          <img src="./images/whatsapp.png" alt="tiktok" style="width:42px;height:42px;">
+        </a>
+        <a href="https://www.instagram.com/blacktopstreetkitchen/" target="_blank" class="fa">
+          <img src="./images/instagram.png" alt="tiktok" style="width:42px;height:42px;">
+        </a>
+        <a href="https://www.tiktok.com/@blacktopstreetkitchen/" target="_blank" class="fa">
+          <img src="./images/tiktok.png" alt="tiktok" style="width:42px;height:42px;">
+        </a>
       </div>
+
     </div>
   </div>
   <div id="locations" class="w3-modal">
