--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .bgimg {
-      background-image: url('./images/bt1.jpeg');
+      background-image: url('./images/bt-long.jpeg');
       min-height: 100%;
       background-position: center;
       background-size: cover;
