--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
     <div class="w3-display-topleft w3-container w3-xlarge">
       <p><button onclick="document.getElementById('menu').style.display='block'"
           class="w3-button w3-black">menu</button></p>
-      <p><button onclick="document.getElementById('contact').style.display='block'"
-          class="w3-button w3-black">book</button></p>
       <p><button onclick="document.getElementById('locations').style.display='block'"
           class="w3-button w3-black">locations</button></p>
+      <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact
+          us</button></p>
     </div>
     <!-- <div class="w3-display-bottomleft w3-container">
       <a target="_blank" href="http://maps.google.com/?q=Erica Drive, Chestnut Way, Belhar 17, Cape Town">
@@ -260,7 +260,8 @@
           </p>
           <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
         </form> -->
-        <a href="https://wa.me/27765063002?text=Hey%20BlackTop%20Street%20Kitchen!%20I'm%20looking%20to%20make%20an%20enquiry%20about%20a%20booking" class="fa">
+        <a href="https://wa.me/27765063002?text=Hey%20BlackTop%20Street%20Kitchen!%20I'm%20looking%20to%20make%20an%20enquiry%20about%20a%20booking"
+          class="fa">
           <img src="./images/whatsapp.png" alt="tiktok" style="width:42px;height:42px;">
         </a>
         <a href="https://www.instagram.com/blacktopstreetkitchen/" target="_blank" class="fa">
@@ -270,7 +271,6 @@
           <img src="./images/tiktok.png" alt="tiktok" style="width:42px;height:42px;">
         </a>
       </div>
-
     </div>
   </div>
   <div id="locations" class="w3-modal">
